tests/ui/endpoint/dynamic_schema_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/ui/endpoint/dynamic_schema_wrong_type.rs:16:21
   |
16 | #[read_all(schema = "schema", status_codes = "status_codes")]
   |                     ^^^^^^^^
   |                     |
   |                     expected `u16`, found struct `StatusCode`
   |                     arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/endpoint/dynamic_schema_wrong_type.rs:8:4
   |
8  | fn schema(_: u16) -> String {
   |    ^^^^^^ ------
help: call `Into::into` on this expression to convert `StatusCode` into `u16`
   |
16 | #[read_all(schema = "schema".into(), status_codes = "status_codes")]
   |                             +++++++

error[E0308]: mismatched types
  --> tests/ui/endpoint/dynamic_schema_wrong_type.rs:16:21
   |
16 | #[read_all(schema = "schema", status_codes = "status_codes")]
   |                     ^^^^^^^^
   |                     |
   |                     expected struct `OpenapiSchema`, found struct `std::string::String`
   |                     expected due to this

error[E0308]: mismatched types
  --> tests/ui/endpoint/dynamic_schema_wrong_type.rs:16:46
   |
16 | #[read_all(schema = "schema", status_codes = "status_codes")]
   |                                              ^^^^^^^^^^^^^^
   |                                              |
   |                                              expected struct `StatusCode`, found `u16`
   |                                              expected due to this
   |
   = note: expected struct `Vec<StatusCode>`
              found struct `Vec<u16>`
